# Rust_Expression_Engine

./: Cargo.toml  README.md
benches/: expression_bench.rs  mod.rs
src/: engine.rs  lib.rs  main  main.rs  stack.rs
src/context/: context.rs
src/core/: mod.rs  precedence.rs  stack.rs  token.rs
src/errors/: error.rs
src/eval/: evaluator.rs
src/lexer/: tokenizer.rs
src/parser/: infix_to_postfix.rs  mod.rs
tests/: evaluator_tests.rs  lexer_tests.rs  parser_tests.rs
